# SPP-Compiler-CPP

./: CMakeLists.txt  main.cpp
include/SPP/Compiler/: Compiler.ixx  CompilerModuleTree.ixx  CompilerStages.ixx  Program.ixx
include/SPP/LexicalAnalysis/: Lexer.ixx  Tokens.ixx
include/SPP/SemanticAnalysis/Asts/: AnnotationAst.ixx  ArrayLiteral0ElementAst.ixx  ArrayLiteralAst.ixx  ArrayLiteralNElementsAst.ixx  AssignmentStatementAst.ixx  Ast.ixx  BinaryExpressionAst.ixx  BooleanLiteralAst.ixx  CaseExpressionAst.ixx  CaseExpressionBranchAst.ixx  ClassAttributeAst.ixx  ClassImplementationAst.ixx  ClassPrototypeAst.ixx  ConventionAst.ixx  CoroutinePrototypeAst.ixx  FloatLiteralAst.ixx  FunctionCallArgumentGroupAst.ixx  FunctionCallArgumentNamedAst.ixx  FunctionCallArgumentUnnamedAst.ixx  FunctionImplementationAst.ixx  FunctionParameterGroupAst.ixx  FunctionParameterOptionalAst.ixx  FunctionParameterRequiredAst.ixx  FunctionParameterSelfAst.ixx  FunctionParameterVariadicAst.ixx  FunctionPrototypeAst.ixx  GenExpressionAst.ixx  GenericArgumentGroupAst.ixx  GenericArgumentTypeNamedAst.ixx  GenericArgumentTypeUnnamedAst.ixx  GenericCompArgumentNamedAst.ixx  GenericCompArgumentUnnamedAst.ixx  GenericCompParameterOptionalAst.ixx  GenericCompParameterRequiredAst.ixx  GenericCompParameterVariadicAst.ixx  GenericIdentifierAst.ixx  GenericParameterGroupAst.ixx  GenericTypeArgumentNamedAst.ixx  GenericTypeArgumentUnnamedAst.ixx  GenericTypeParameterInlineConstraintsAst.ixx  (+81 more)
include/SPP/SemanticAnalysis/Meta/: AstPrinter.ixx
include/SPP/SemanticAnalysis/Mixins/: TypeInfer.ixx
include/SPP/SemanticAnalysis/Scoping/: Scope.ixx  ScopeManager.ixx  Symbol.ixx  SymbolTable.ixx
include/SPP/SyntacticAnalysis/: Parser.ixx  ParserErrors.ixx
include/SPP/Utils/: Converter.ixx  ErrorFormatter.ixx  Pointers.ixx  PrettyPrinter.ixx  VariantIntrinsics.ixx
src/SPP/: CMakeLists.txt
src/SPP/Compiler/: CMakeLists.txt  CompilerStages.cpp
src/SPP/LexicalAnalysis/: CMakeLists.txt  Lexer.cpp
src/SPP/SemanticAnalysis/: CMakeLists.txt
src/SPP/SemanticAnalysis/Asts/: AnnotationAst.cpp  ArrayLiteral0ElementAst.cpp  ArrayLiteralNElementsAst.cpp  AssignmentStatementAst.cpp  Ast.cpp  BinaryExpressionAst.cpp  BooleanLiteralAst.cpp  CMakeLists.txt  CaseExpressionAst.cpp  CaseExpressionBranchAst.cpp  ClassAttributeAst.cpp  ClassImplementationAst.cpp  ClassPrototypeAst.cpp  ConventionAst.cpp  CoroutinePrototypeAst.cpp  FloatLiteralAst.cpp  FunctionCallArgumentGroupAst.cpp  FunctionCallArgumentNamedAst.cpp  FunctionCallArgumentUnnamedAst.cpp  FunctionImplementationAst.cpp  FunctionParameterGroupAst.cpp  FunctionParameterOptionalAst.cpp  FunctionParameterRequiredAst.cpp  FunctionParameterSelfAst.cpp  FunctionParameterVariadicAst.cpp  FunctionPrototypeAst.cpp  GenExpressionAst.cpp  GenericArgumentGroupAst.cpp  GenericCompArgumentNamedAst.cpp  GenericCompArgumentUnnamedAst.cpp  GenericCompParameterOptionalAst.cpp  GenericCompParameterRequiredAst.cpp  GenericCompParameterVariadicAst.cpp  GenericIdentifierAst.cpp  GenericParameterGroupAst.cpp  GenericTypeArgumentNamedAst.cpp  GenericTypeArgumentUnnamedAst.cpp  GenericTypeParameterInlineConstraintsAst.cpp  GenericTypeParameterOptionalAst.cpp  GenericTypeParameterRequiredAst.cpp  (+73 more)
src/SPP/SemanticAnalysis/Meta/: AstPrinter.cpp  CMakeLists.txt
src/SPP/SemanticAnalysis/Mixins/: CMakeLists.txt  TypeInfer.cpp
src/SPP/SemanticAnalysis/Scoping/: CMakeLists.txt
src/SPP/SyntacticAnalysis/: CMakeLists.txt  Parser.cpp  ParserErrors.cpp
src/SPP/Utils/: CMakeLists.txt  ErrorFormatter.cpp
